--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-# spring.datasource.url=jdbc:mysql://localhost:3306/fundtransfer
-# spring.datasource.username=${user:root}
-# spring.datasource.password=${password:54321000Ml!}
+spring.datasource.url=jdbc:mysql://localhost:3306/fundtransfer
+spring.datasource.username=${user:root}
+spring.datasource.password=${password:54321000Ml!}
 
-spring.datasource.url=jdbc:${MYSQL_URL}
-spring.datasource.username=${MYSQLUSER}
-spring.datasource.password=${MYSQLPASSWORD}
+mongo.url=mongodb://localhost:27017
+
+# spring.datasource.url=jdbc:${MYSQL_URL}
+# spring.datasource.username=${MYSQLUSER}
+# spring.datasource.password=${MYSQLPASSWORD}
