--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/fundtransfer
-spring.datasource.username=${user:root}
-spring.datasource.password=${password:54321000Ml!}
+spring.datasource.url=jdbc:mysql://root:54321000Ml!@localhost:3306/fundtransfer
+# spring.datasource.url=jdbc:mysql://localhost:3306/fundtransfer
+# spring.datasource.username=${user:root}
+# spring.datasource.password=${password:54321000Ml!}
 
 mongo.url=mongodb://localhost:27017
 
+### no ndeed username & password if included in url
+### when deploy to railway:
+# spring.datasource.url=jdbc:mysql://root:OuvLR3VcY4WcGYQKzBhA@containers-us-west-60.railway.app:6183/railway
 # spring.datasource.url=jdbc:${MYSQL_URL}
 # spring.datasource.username=${MYSQLUSER}
 # spring.datasource.password=${MYSQLPASSWORD}
